# InboxRadar

./: .env.example  .gitignore  README.md  pyproject.toml
src/inbox_radar/: __init__.py  alert_manager.py  application.py  auth.py  config.py  database.py  delta_state.py  desktop.py  errors.py  graph.py  message_processor.py  paths.py  poc_selftest.py  single_instance.py  spike.py  sync_controller.py  sync_engine.py  windows_protection.py
src/inbox_radar/ui/: alert_popup.py  app_icon.py  main_window.py  pending_card.py  theme.py  tray_icon.py
