[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inbox-radar"
version = "0.1.0"
description = "Local attention layer for Microsoft 365 mail"
requires-python = ">=3.12"
dependencies = [
    "msal>=1.31,<2",
    "msal-extensions>=1.3,<2",
    "python-dotenv>=1.0,<2",
    "requests>=2.32,<3",
    "PySide6==6.11.1",
]

[project.scripts]
inbox-radar-spike = "inbox_radar.spike:main"
inbox-radar = "inbox_radar.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]
